--- a/css/styles.css
+++ b/css/styles.css
@@ -11,11 +11,11 @@ header, footer {
     background-color: #333;
     color: white;
     text-align: center;
-    padding: 20px;
+    padding: 10px;
 }
 
 footer {
-    position: fixed;
+    margin-top: auto;
     bottom: 0;
     width: 100%;
 }
@@ -51,16 +51,6 @@ h2 {
     color: #333;
 }
 
-footer {
-    background-color: #333;
-    color: white;
-    text-align: center;
-    padding: 1px;
-    position: fixed;
-    width: 100%;
-    bottom: 0;
-}
-
 
 @media only screen and (max-width: 600px) {
     header, footer {
@@ -79,3 +69,26 @@ footer {
     }
 }
 
+button {
+    background-color: rgba(0, 0, 0, 0.918);
+    color: white;
+    padding: 8px 15px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-weight: bold;
+}
+
+button:hover {
+    background-color: black;
+}
+
+form input[type="text"],
+form input[type="email"],
+form textarea {
+    width: 100%;
+    padding: 5px;
+    margin: 5px 0;
+    border: 1px solid #ccc;
+    border-radius: 2px;
+}
